tests/negative/sync_in_transaction.def
// Negative unit test for a sync inside of a transaction.

def foo () -> void
begin
    atomic begin
        sync;
    end
end
